@@ -1,5 +1,9 @@
 2017-11-29  Sam Steingold  <sds@gnu.org>
 
+	* amigasock.lisp: Remove the last vestige of Amiga support.
+
+2017-11-29  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (check-doc): Also test sys::ensure-clhs-map.
 
 2017-11-29  Sam Steingold  <sds@gnu.org>
